--- a/proyectoIntegrador/src/app/components/education-section/education-section.component.html
+++ b/proyectoIntegrador/src/app/components/education-section/education-section.component.html
@@ -1,13 +1,13 @@
 <section class="education-section">
     <h2 class="sub2">Logros Educativos</h2>
     <div class="education-grid">
-        <div class="education-card">
-            <img src=".//IMG/logo.png">
+        <div class="education-card1">
+            <img src="../../../assets/logo.png">
             <h3>Argentina Programa #Seprogramar</h3>
             <p>Curso de lógica deprogramación, primera etapa del Argentina Programa</p>
         </div>
         <div class="education-card">
-            <img src=".//IMG/cs50logo.jpg" alt=>
+            <img src="../../../assets/cs50logo.jpg" alt=>
             <h3>CS50: Introduction To Computer Science</h3>
             <p>Curso de introducción al pensamiento computacional</p>
         </div>
