--- a/proyectoIntegrador/src/app/components/main/main.component.html
+++ b/proyectoIntegrador/src/app/components/main/main.component.html
@@ -1,5 +1,9 @@
 <section>
     <app-nombre-perfil></app-nombre-perfil>
-</section>
     <app-about-section></app-about-section>
     <app-experience-section></app-experience-section>
+    <app-education-section></app-education-section>
+    <app-skills-section></app-skills-section>
+</section>
+
+<script src="app.js"></script>
