--- a/proyectoIntegrador/src/app/components/main/main.component.html
+++ b/proyectoIntegrador/src/app/components/main/main.component.html
@@ -4,6 +4,8 @@
     <app-experience-section></app-experience-section>
     <app-education-section></app-education-section>
     <app-skills-section></app-skills-section>
+    <app-proyects-section></app-proyects-section>
+    <footer></footer>
 </section>
 
 <script src="app.js"></script>
