--- a/proyectoIntegrador/src/app/components/proyects-section/proyects-section.component.html
+++ b/proyectoIntegrador/src/app/components/proyects-section/proyects-section.component.html
@@ -1,1 +1,18 @@
-<p>proyects-section works!</p>
+<section class="projects-section">
+    <h2 class="sub4">Proyectos</h2>
+    <div class="projects-grid">
+    <div class="project-card">
+    <h3>Body Mass Calculator</h3>
+    <p>Programa creado con HTML que calcula el indice de masa muscular</p>
+    <p>Fecha de Creación: 22/11/2022</p>
+    <a href="https://github.com/GiulianaAmbrosino/Some-Proyects-/tree/main/Body%20Mass%20Calculator/Body%20Mass%20Calculator" target="_blank">Link GitHub</a>
+    </div>
+    <div class="project-card">
+    <h3>Adivinar Número</h3>
+    <p>Un juego creado con HTML, CSS Y Javascript donde el usuario debe adivinar un número aleatorio</p>
+    <p>Fecha de Creación: 11/5/2023</p>
+    <a href="https://github.com/GiulianaAmbrosino/Some-Proyects-/tree/main/Adivinar%20n%C3%BAmero" target="_blank">Link a GitHub</a>
+    </div>
+    </div>
+    </section>
+    
