--- a/proyectoIntegrador/src/app/components/skills-section/skills-section.component.html
+++ b/proyectoIntegrador/src/app/components/skills-section/skills-section.component.html
@@ -9,19 +9,52 @@
         <div class="skill-card">
         <img src="../../../assets/html5.png" >
         <h3>HTML5</h3>
-        <h4>100%</h4>
+        <div class="row">
+            <circle-progress
+            [percent]="80"
+            [radius]="35"
+            [outerStrokeWidth]="3"
+            [innerStrokeWidth]="4"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="300"
+          ></circle-progress>
+        </div>
     </div>
 
         <div class="skill-card">
         <img src="../../../assets/css-3.png" >
         <h3>CSS</h3>
-        <h4>80%</h4>
+        <div class="row">
+            <circle-progress
+            [percent]="80"
+            [radius]="35"
+            [outerStrokeWidth]="3"
+            [innerStrokeWidth]="4"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="300"
+          ></circle-progress>
+        </div>
         </div>
 
         <div class="skill-card">
         <img src="../../../assets/javascript.png" >
         <h3>JAVASCRIPT</h3>
-        <h4>60%</h4>
+        <div class="row">
+            <circle-progress
+            [percent]="80"
+            [radius]="35"
+            [outerStrokeWidth]="3"
+            [innerStrokeWidth]="4"
+            [outerStrokeColor]="'#78C000'"
+            [innerStrokeColor]="'#C7E596'"
+            [animation]="true"
+            [animationDuration]="300"
+          ></circle-progress>
+        </div>
         </div>
 
     </div>
