--- a/proyectoIntegrador/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/proyectoIntegrador/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,61 @@
-<img src="../../../assets/logo.png" class="logo-container" position="absolute">
+<section class="background-radial-gradient overflow-hidden vh-100">
+    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+      <div class="row gx-lg-5 align-items-center mb-5">
+        <div class="text-right">
+          <img src="../../../assets/APLogo.png" style="width: 265px" alt="logo" />
+          
+        </div>
+  
+        <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+          <div
+            id="radius-shape-1"
+            class="position-absolute rounded-circle shadow-5-strong"
+          ></div>
+          <div
+            id="radius-shape-2"
+            class="position-absolute shadow-5-strong"
+          ></div>
+  
+          <div class="card bg-glass">
+            <div class="card-body px-4 py-5 px-md-5">
+              <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input
+                    type="email"
+                    id="nombreUsuario"
+                    name="nombreUsuario"
+                    class="form-control form-control-lg"
+                    [(ngModel)]="nombreUsuario"
+                    required
+                  />
+                  <label class="form-label" for="nombreUsuario">Usuario</label>
+                </div>
+  
+                <!-- Password input -->
+                <div class="form-outline mb-4">
+                  <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    class="form-control form-control-lg"
+                    [(ngModel)]="password"
+                    required
+                  />
+                  <label class="form-label" for="password">Password</label>
+                </div>
+  
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block mb-4">
+                  Entrar
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Section: Design Block -->
+  
