--- a/proyectoIntegrador/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/proyectoIntegrador/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -1,8 +1,6 @@
-
-          <div>   
-          <img src="../../../assets/APLogo.png" style="width: 265px" alt="logo" />
-          
-        </div>
+<div class="logo-container">
+  <img src="../../../assets/logo.png">
+</div>
   
  
   
