--- a/proyectoIntegrador/FrontEnd/src/app/components/header/header.component.html
+++ b/proyectoIntegrador/FrontEnd/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-    <app-login></app-login>
+    <app-login-ap></app-login-ap>
     <app-logo-ap></app-logo-ap>
     <app-social></app-social>
 </div>
